<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RvKernel Manager</string>

    <!-- Scheduler -->
    <string name="scheduler_title">Scheduler</string>
    <string name="sched_autogroup_enabled">Auto Task Groups</string>
    <string name="sched_child_runs_first">Optimize Child Process</string>

    <!-- Charging -->
    <string name="charging_title">Charging</string>
    <string name="input_suspend">Bypass Charging</string>
    <string name="force_fast_charge">Fast Charging</string>
    <string name="disable_thermal">Disable Thermal Charging</string>

    <!-- CPU -->
    <string name="cpu0_title">Little Cluster CPU</string>
    <string name="min_freq">Minimum Frequency</string>

    <string name="cpu4_title">Big Cluster CPU</string>
    <string name="max_freq">Maximum Frequency</string>
    <string name="cpu_governor">Governor</string>

    <!-- GPU -->
    <string name="gpu_title">GPU</string>
    <string name="thermal_gpu">Disable Thermal GPU</string>
    <string name="adreno_boost">Adreno Boost</string>
    
    <!-- RvTuning -->
    <string name="rvtuning_title">RvTuning</string>
    <string name="rvtuning_mode">Kernel Mode</string>
    
    <!-- Info -->
    <string name="info_title">Info</string>
    <string name="device_codename">Codename</string>
    <string name="ram_info">RAM :</string>
    <string name="kernel_version">Kernel :</string>
</resources>
