<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:clickable="false"
        android:textStyle="bold"
        android:text="Charging"
        android:textSize="26sp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/colorContainerOverlay"
        app:strokeWidth="2dp"
        app:strokeColor="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="20dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="3dp"
                    android:clickable="false"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/force_fast_charge" />

                <Switch
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/switchFastCharging"
                    android:thumb="@drawable/switch_foggy_thumb"
                    android:track="@drawable/switch_foggy_track" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="3dp"
                    android:clickable="false"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/input_suspend" />

                <Switch
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/switchBypassCharging"
                    android:thumb="@drawable/switch_foggy_thumb"
                    android:track="@drawable/switch_foggy_track" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="10dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="3dp"
                    android:clickable="false"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/disable_thermal" />

                <Switch
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/switchDisableThermalCharging"
                    android:thumb="@drawable/switch_foggy_thumb"
                    android:track="@drawable/switch_foggy_track" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
